# eq_solve

./: pyproject.toml
core/: math.py
tests/: test_solve.py
