[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Brandon Corfman <brandon.c.corfman.civ@army.mil>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.8.0"
pysnooper = "^1.1.1"
flake8 = "^6.0.0"
yapf = "^0.32.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
